Fixed options overflow on mobile

--- a/wheel.css
+++ b/wheel.css
@@ -219,6 +219,10 @@
 
   #options-list {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+  }
+
+  #options-list li {
+    min-width: 0;
   }
 }
